<resources>
    <string name="app_name">Checkpoint2</string>
    <string name="cadastro">Cadastro</string>
    <string name="lista">Lista</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="salvar">Salvar</string>
</resources>
